# bloomberg-backend

./: .gitignore  README.md  main.py  pyproject.toml
apps/todo/: routers.py
