[project]
name = "bloomberg-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Awe42",email = "anish.pathak5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.124.2,<0.125.0)",
    "motor (>=3.7.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
